# pcp_arbitrage

./: .gitignore  Makefile  README.md  README.zh.md  config.yaml.example  pyproject.toml
docs/: README.md  TODO.md  architecture-and-flow.md  margin-rules-binance-okx-deribit.md  order-flow.md
docs/superpowers/: README.md
docs/superpowers/plans/: 2026-04-04-pcp-arbitrage.md  2026-04-05-binance-deribit.md  2026-04-05-multi-exchange.md  2026-04-13-deribit-ws-portfolio.md  2026-04-14-exit-retry-entry-sizing.md
docs/superpowers/specs/: 2026-04-04-ccxt-adapter-design.md  2026-04-04-multi-exchange-design.md  2026-04-04-pcp-arbitrage-design.md  2026-04-05-binance-deribit-ccxt-design.md  (+2 more)
etc/: supervisord.conf
etc/nginx/: pcp-arbitrage.conf
scripts/: setup.sh
src/pcp_arbitrage/: account_fetcher.py  config.py  db.py  exchange_symbols.py  fee_fetcher.py  instruments.py  main.py  market_data.py  models.py  notifier.py  okx_client.py  opportunity_dashboard.py  order_manager.py  pcp_calculator.py  position_tracker.py  signal_output.py  signal_printer.py  tracing.py  web_dashboard.py
tests/: conftest.py  test_binance_normalize.py  test_config.py  test_db.py  test_deribit_normalize.py  test_deribit_portfolio.py  test_exchange_symbols.py  test_instruments.py  test_market_data.py  test_models.py  test_notifier.py  test_opportunity_dashboard.py  test_order_manager.py  test_pcp_calculator.py  test_position_tracker.py  test_signal_output_notifications.py  test_signal_printer.py  test_submit_exit.py  test_web_dashboard_notifications.py
tests/fixtures/: config_test.yaml
(+5 files in other folders)
