[project]
name = "pcp-arbitrage"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1",
    "aiohttp>=3.9",
    "aiohttp-socks>=0.11.0",
    "pyyaml>=6.0",
    "rich>=13.7",
]

[project.scripts]
pcp-arbitrage = "pcp_arbitrage.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pcp_arbitrage"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
